ci(release): déploiement SSH vers /app/Shiply + compose prod, suppression email

--- a/docs/C2.2.4_deploiement-progressif.md
+++ b/docs/C2.2.4_deploiement-progressif.md
@@ -6,11 +6,8 @@
 - Publication d’URLs utiles (app/API) et du statut final.
 
 ### Historique des versions
-- Tags SemVer sur `main` (`vX.Y.Z`) + changelog auto.
+- Tags SemVer sur `main` (`vX.Y.Z`) + changement changelog.
 - Historique des déploiements par projet (date, auteur, commit, résultat, URL, durée).
-
-### Opérations post‑déploiement
-- Actions « Re‑run », « Promote » (staging → prod) et « Rollback » (MVP+: planifiées).
 
 ### Manipulabilité
 - L’application est utilisable après déploiement: UI accessible, API fonctionnelle, runner opérationnel.
