--- a/docs/C2.3.1_cahier-de-recettes.md
+++ b/docs/C2.3.1_cahier-de-recettes.md
@@ -1,26 +1,66 @@
 ## Cahier de recettes (C2.3.1)
 
-### Recette 1 – Création d’un projet et sync pipeline
+### Recette 1 – Connexion (login)
+1) Aller sur `/login`, saisir email/mot de passe d’un utilisateur valide (ex: admin).
+2) Valider.
+Résultat attendu: redirection vers le Dashboard, token stocké (storage), en-têtes auth actifs.
+
+### Recette 2 – Déconnexion (logout)
+1) Cliquer sur « Déconnexion » sur la sidebar.
+Résultat attendu: token supprimé, retour à la page de connexion, accès API protégés refusés.
+
+### Recette 3 – KPIs Dashboard
+1) Ouvrir `Home`.
+Résultat attendu: nombres réels (projets, pipelines, runs), taux de succès global calculé correctement.
+
+### Recette 4 – Création d’un projet et sync pipeline
 1) Depuis `Projects`, cliquer « Nouveau projet » → renseigner nom/clé/desc.
 2) Dans `ProjectCreateFinalize`, choisir GitHub, `repositoryFullName` et `pipelinePath`.
-3) Sauvegarder. Vérifier que la sync crée/MAJ un pipeline « repository-sync ».
+3) Sauvegarder. Vérifier que la synchronisation avec la pipeline yaml configurée dans le projet est bien faite.
 Résultat attendu: pipeline présent, statut OK ou erreurs de validation explicites.
 
-### Recette 2 – Exécution d’un pipeline
+### Recette 5 – Sync pipeline depuis dépôt (erreurs gérées)
+1) Déclencher « Synchroniser depuis dépôt ».
+Résultat attendu: pipeline `repository-sync` créé/MAJ ou message d’erreur détaillé (ref/path essayés).
+
+### Recette 6 – Exécution d’un pipeline
 1) Lancer une exécution depuis `ProjectDetails`.
-2) Ouvrir `RunDetails` → vérifier jobs, logs live (SSE) et statut agrégé.
-Résultat attendu: étapes s’enchaînent, logs temps réel, statut final correct.
+2) Ouvrir `RunDetails` → verifier que les jobs sont bien ceux configurés dans le yaml.
+Résultat attendu: les jobs s'enchainent et les logs sont affichés.
 
-### Recette 3 – Déploiement
-1) Sur un run « success », cliquer « Déployer ».
-2) Observer les logs du job Deploy et les smoke tests.
-Résultat attendu: driver adéquat exécuté, smoke test OK, URLs publiées.
+### Recette 7 – Logs temps réel (SSE)
+1) Sur `RunDetails`, sélectionner un job en cours.
+Résultat attendu: logs qui s’actualisent en direct sans rechargement.
 
-### Recette 4 – Annulation d’un run
+### Recette 8 – Rafraîchissement des statuts
+1) Laisser `RunDetails` ouvert pendant l’exécution.
+Résultat attendu: statuts run/jobs mis à jour automatiquement, fin de run agrégée correcte.
+
+### Recette 9 – Annulation d’un run
 1) Lancer un run puis cliquer « Stop ».
-Résultat attendu: statut `canceled`, containers/process stoppés côté runner.
+Résultat attendu: statut `canceled`, containers/process stoppés côté runner. Le runner doit etre stoppé et de nouveaux accessible.
 
-### Recette 5 – Suppression d’un projet
+### Recette 10 – Runner heartbeat et disponibilité
+1) Lancer le runner local.
+Résultat attendu: heartbeat OK.
+
+### Recette 11 – Déploiement
+1) Sur un run « success », cliquer « Déployer ».
+2) Observer les logs du job Deploy.
+Résultat attendu: Site disponible sur l'url publiée (le serveur).
+
+### Recette 12 – Secrets chiffrés
+1) Créer un secret (clé/valeur) pour un projet.
+Résultat attendu: stockage chiffré, valeur jamais exposée en clair dans les logs/réponses API.
+
+### Recette 13 – Accessibilité de base (A11y)
+1) Naviguer au clavier sur les pages clés (Login, Projects, ProjectDetails, RunDetails).
+Résultat attendu: focus visible, éléments cliquables accessibles, boutons `<button>` utilisés, labels `htmlFor` corrects.
+
+### Recette 14 – Erreurs GitHub anticipées
+1) Définir un `pipelinePath` inexistant ou un `defaultBranch` erroné.
+Résultat attendu: message d’erreur structuré avec URL GitHub essayée, ref utilisée et paths candidats.
+
+### Recette 15 – Suppression d’un projet
 1) Depuis `ProjectDetails`, cliquer « Supprimer ».
-Résultat attendu: suppression en base, cascade vers pipelines/runs/jobs, workspace supprimé.
-
+Résultat attendu: suppression en base, workspace présent sur le serveur supprimé.
