feat(frontend): add Landing Hero page and public route

--- a/docs/C2.4.1_manuel-utilisation.md
+++ b/docs/C2.4.1_manuel-utilisation.md
@@ -1,18 +1,49 @@
 ## Manuel d’utilisation (C2.4.1)
 
+Ce guide explique comment utiliser l’interface Shiply: connexion, création de projet, synchronisation de pipeline, exécution, suivi des logs en temps réel, déploiement et suppression de projet.
+
 ### Connexion
-- Authentifiez‑vous via la page Login.
+- Accéder à l’application (en dev: `http://localhost:12002`) ou en production sur `https://shiply-app.fr/`.
+- Se connecter via la page de Login. Après connexion, la page « Dashboard » s’affiche.
 
-### Projets
-- Créer un projet, compléter `ProjectCreateFinalize` (repo, pipelinePath, runMode, env vars).
-- Consulter `ProjectDetails` pour voir métriques, pipelines et derniers runs.
-- Supprimer un projet depuis `ProjectDetails` (cascade DB + workspace disque).
+### Créer et configurer un projet
+Depuis la page « Dashboard », créer un nouveau projet puis sélectionner GitHub comme source du projet. Compléter ensuite les informations principales. L'objectif est de permettre à Shiply de retrouver le pipeline dans le dépôt et de savoir comment déployer.
+- Branche par défaut: `defaultBranch` (ex: `main`).
+- Racine du projet: `rootPath` si le dépôt contient un sous-dossier.
+- Mode de déploiement: `runMode` parmi `compose`, `dockerfile` ou `command`.
+- Variables d'environnement: ajouter les paires `key/value` nécessaires aux jobs.
 
-### Pipelines & Runs
-- Synchroniser pipeline depuis GitHub (auto à la création si GitHub).
-- Lancer un run depuis `ProjectDetails`. Suivre en temps réel dans `RunDetails`.
-- Stopper un run en cours. Déployer un run « success ».
+Une fois le projet créé/enregistré, Shiply tente automatiquement de synchroniser le pipeline depuis le dépôt Git (si les infos Git sont fournies).
 
-### Logs
-- Logs agrégés par job, streaming SSE, bouton « Clear » dans `RunDetails`.
+### Synchroniser un pipeline
+La synchronisation lit le fichier YAML du pipeline sur la branche par défaut, en testant les chemins usuels (`.shiply.yml/.yaml` à la racine ou dans `rootPath`).
+- En cas d’erreur « fichier introuvable », vérifier: `repositoryFullName`, `defaultBranch`, `pipelinePath` et `rootPath`.
+- Une fois synchronisé, le pipeline apparaît dans la fiche projet.
 
+### Exécuter un pipeline (Run)
+Depuis la fiche projet, lancer un run. Chaque stage/step est transformé en un ou plusieurs jobs, exécutés par le runner dans des conteneurs Docker.
+- Suivi en temps réel: cliquer sur un job pour voir sa console.
+- Annulation: le bouton « Stop » arrête proprement l’exécution .
+- Statuts: le run agrège automatiquement les statuts des jobs (`running`, `success`, `failed`, `canceled`).
+
+### Logs en temps réel
+Les logs de chaque job sont accessibles dans la page de détails du run.
+- Streaming: affichage en direct via SSE (fallback en polling si SSE indisponible).
+- Préchargement: les logs existants sont chargés d’abord, puis le flux temps réel prend le relais.
+- Nettoyage: un bouton « Clear » permet d’effacer l’affichage local (sans supprimer le fichier côté serveur).
+
+### Déployer un run réussi
+Quand un run termine avec succès, l’action « Déployer » est disponible. Le déploiement crée un job spécial `__shiply_deploy__:<driver>` qui:
+- utilise le driver défini par `runMode` (`compose`, `dockerfile` ou `command`),
+- stream les logs côté UI, comme pour les autres jobs,
+- exécute des vérifications simples (smoke tests) si configurées.
+
+### Supprimer un projet
+La suppression est accessible depuis la fiche projet. Elle supprime:
+- les enregistrements liés (pipelines, runs, jobs),
+- ainsi que le workspace local correspondant au projet (dossier monté côté runner/API).
+
+### Astuces & dépannage rapide
+- Synchronisation GitHub: en cas de 404, vérifier `repositoryFullName`, `defaultBranch`, `pipelinePath`, `rootPath`.
+- Runner/Docker (Windows): si le runner ne parvient pas à créer des conteneurs, définir `DOCKER_HOST=tcp://localhost:2375` et activer l’option correspondante dans Docker Desktop.
+- Affichage des statuts: l’UI rafraîchit automatiquement les statuts de run/job; un rechargement manuel peut être utile si la connexion réseau a fluctué.
