--- a/docs/C2.2.3_securite-et-accessibilite.md
+++ b/docs/C2.2.3_securite-et-accessibilite.md
@@ -1,20 +1,29 @@
 ## Mesures de sécurité et accessibilité (C2.2.3)
 
-### OWASP Top 10 – Mesures appliquées
-- Authentification JWT + RBAC par rôles (viewer/dev/maintainer/admin).
-- Rate limiting et CORS whitelist.
-- Headers sécurité via Helmet (XSS, sniffing, frameguard…).
-- Stockage chiffré des secrets (AES‑256‑GCM), masquage dans logs.
-- Validation stricte des entrées (schema pipelines avec `ajv`).
-- Journalisation/audit des actions sensibles (déploiements, promotions, rollbacks).
-- Scans de vulnérabilités (Trivy) sur images Docker.
+### Sécurité applicative (alignée avec l’implémentation actuelle)
+- Authentification par jeton (API Access Tokens AdonisJS). Le token est stocké côté client et envoyé sur chaque requête.
+- Contrôle d’accès côté API par middleware d’authentification; périmètre des routes selon l’état authentifié. Les rôles (viewer/dev/maintainer/admin) sont prévus par le modèle mais limités dans l’UI du MVP.
+- CORS configuré de façon stricte (`server/config/cors.ts`) et reverse‑proxy Nginx en production.
+- En‑têtes de sécurité fournis par AdonisJS/Nginx (désactivation X‑Powered‑By, politiques de base) et réponses JSON uniformisées.
+- Validation des entrées: schéma YAML de pipelines validé via `ajv` (`pipeline_schema.ts`), validateurs d’auth côté API.
+- Journalisation: logs structurés côté API et stockage des logs d’exécution côté runner, diffusion SSE en lecture seule.
 
-### Accessibilité (RGAA)
-- Composants interactifs au clavier: focus visible, ordre logique, rôles ARIA.
-- Labels associés via `htmlFor`, alternatives textuelles pour icônes/images.
-- Tests `axe` automatisés sur composants clés.
-- Contrastes respectés via palette shadcn/Tailwind configurée.
+### Données sensibles & secrets
+- Chiffrement AES‑256‑GCM via `CryptoService` pour les secrets en base (clé dérivée de `APP_KEY`).
+- Masquage des valeurs sensibles dans les logs; variables d’environnement chargées à l’exécution (pas d’embarqué dans l’image Docker).
+- Fichiers `.env` ignorés par Git; exemples/documentation fournis pour la configuration.
+
+### Chaîne CI/CD & conteneurs
+- Analyse de vulnérabilités des images Docker via Trivy dans la pipeline de release GitHub Actions.
+- Images publiées sur Docker Hub puis tirées par `docker-compose.prod.yml` (déploiement continu). Migrations DB lancées post‑déploiement.
+- Runner: exécution des jobs dans des conteneurs Docker éphémères; variables contrôlées, TTY désactivé, couleurs/interaction réduites.
+
+### Accessibilité (RGAA)z
+- Navigation clavier: focus visible, ordre logique des éléments interactifs, composants shadcn conformes.
+- Sémantique et labellisation: labels reliés via `htmlFor`, textes alternatifs pour icônes/images lorsque pertinent.
+- Contrastes: palette shadcn/Tailwind personnalisée avec contrastes suffisants (thèmes clair/sombre).
+- Tests: support prévu avec `axe` sur les écrans clés; corrections intégrées au fil du développement UI.
 
 ### Justification
-Ces mesures réduisent l’exposition aux attaques courantes (XSS, CSRF, injections, secrets leakage) et améliorent l’accès aux utilisateurs en situation de handicap, critères incontournables pour une plate‑forme CI/CD.
+Ces mesures adressent les risques OWASP les plus courants (XSS, injections, exposition de secrets) tout en garantissant un socle d’accessibilité. Elles sont cohérentes avec l’architecture actuelle (AdonisJS, Nginx, Docker) et le niveau MVP du projet, avec une trajectoire claire pour renforcer RBAC, limitation de débit et audits automatiques au fur et à mesure.
 
