--- a/docs/C2.2.4_deploiement-progressif.md
+++ b/docs/C2.2.4_deploiement-progressif.md
@@ -2,8 +2,12 @@
 
 ### Stratégie
 - Passage Dev → Staging → Prod avec gate manuel sur Deploy.
-- Smoke tests après chaque déploiement (HTTP 200 sur endpoints configurés).
 - Publication d’URLs utiles (app/API) et du statut final.
+
+### Intégration CI/CD
+- CI/CD gérée par GitHub Actions (workflow release). À chaque tag SemVer poussé sur `main`, la CI build et publie les images Docker (`doxteurn/shiply-api:<tag>`, `doxteurn/shiply-nginx:<tag>`).
+- CD: les serveurs tirent ces images via `docker-compose.prod.yml` (`pull` puis `up -d --remove-orphans`).
+- Le flux est continu: tout tag validé en CI est déployable.
 
 ### Historique des versions
 - Tags SemVer sur `main` (`vX.Y.Z`) + changement changelog.
